# egeHelper

./: .gitignore  TODO.md  alembic.ini  main.py  pyproject.toml
app/: config.py
app/auth/: jwt_helpers.py  utils.py  validation.py
app/core/: auth.py  users.py
app/database/: db.py
app/migrations/: env.py
app/migrations/versions/: 2025_10_29_1808-d7780991229c_init_models.py  2025_10_29_2239-b2ee67f31bca_fastapi_users.py  2025_10_30_1258-0316ada6c2e3_update_user.py  2025_11_02_2105-b6ff6672af00_date_column_in_session.py
app/models/: __init__.py  notes.py  sessions.py  subjects.py  tasks.py  users.py
app/repositories/: base.py  notes.py  sessions.py  subjects.py  tasks.py  users.py
app/routes/: __init__.py  auth.py  notes.py  sessions.py  subjects.py  tasks.py
app/schemas/: nodes.py  notes.py  sessions.py  subjects.py  tasks.py  users.py
app/services/: notes.py  sessions.py  subjects.py  tasks.py  users.py
