[project]
name = "ege-trainer"
version = "0.1.0"
description = ""
authors = [
    {name = "daniil",email = "wwcern0vdan11lzxc@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.120.1,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"